--- a/PostTracker/ExpiredPostTrackerService/pom.xml
+++ b/PostTracker/ExpiredPostTrackerService/pom.xml
@@ -2,11 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>PostTracker</artifactId>
     <groupId>org.voting</groupId>
-    <artifactId>voting</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>ExpiredPostTrackerService</artifactId>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -87,6 +89,10 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-dynamodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sqs</artifactId>
         </dependency>
 
     </dependencies>
