--- a/VotingSystem1/pom.xml
+++ b/VotingSystem1/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>aws-java-sdk-dynamodb</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
